--- a/apuntate.html
+++ b/apuntate.html
@@ -35,7 +35,7 @@
 
       <!-- Monitor -->
       <div class="section">
-        <img src="img/apuntate-monitor.jpeg" alt="Quiero ser monitor">
+        <img src="img/apuntate-monitor.jpg" alt="Quiero ser monitor">
         <h2>Soy monitor</h2>
         <button class="saber-mas" onclick="openPopup('popupMonitor')">
           Inscripción
@@ -44,7 +44,7 @@
 
       <!-- Scout -->
       <div class="section">
-        <img src="img/portfolio/apuntate-scout.jpeg" alt="Quiero ser scout">
+        <img src="img/portfolio/apuntate-scout.jpg" alt="Quiero ser scout">
         <h2>Quiero ser scout</h2>
         <button class="saber-mas" onclick="openPopup('popupScout')">
           Inscripción
