--- a/apuntate.html
+++ b/apuntate.html
@@ -17,7 +17,7 @@
     <div class="hero">
       <div class="hero-content">
         <h1>Grupo Scout Vatnajökull</h1>
-        <h2>Actividades</h2>
+        <h2>¡Apúntate!</h2>
       </div>
     </div>
     <nav>
@@ -26,6 +26,7 @@
         <li><a href="aboutus.html"><i class="fas fa-users"></i> Quienes somos</a></li>
         <li><a href="actividades.html"><i class="fas fa-project-diagram"></i> Actividades</a></li>
         <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
+        <li><a href="apuntate.html"><i class="fas fa-project-diagram"></i> ¡Apúntate!</a></li>
       </ul>
     </nav>
   </header>
@@ -36,7 +37,7 @@
       <!-- Monitor -->
       <div class="section">
         <img src="img/apuntate-monitor.jpg" alt="Quiero ser monitor">
-        <h2>Soy monitor</h2>
+        <h2>Quiero ser monitor</h2>
         <button class="saber-mas" onclick="openPopup('popupMonitor')">
           Inscripción
         </button>
@@ -44,7 +45,7 @@
 
       <!-- Scout -->
       <div class="section">
-        <img src="img/portfolio/apuntate-scout.jpg" alt="Quiero ser scout">
+        <img src="img/apuntate-scout.jpg" alt="Quiero ser scout">
         <h2>Quiero ser scout</h2>
         <button class="saber-mas" onclick="openPopup('popupScout')">
           Inscripción
@@ -103,15 +104,15 @@
   </footer>
 
   <script>
-    function openPopup(popupId) {
-      document.getElementById(popupId).classList.add('show');
-      document.getElementById('overlay').classList.add('show');
-    }
+  function openPopup(id) {
+    document.getElementById('overlay').classList.add('active');
+    document.getElementById(id).classList.add('active');
+  }
 
-    function closePopup(popupId) {
-      document.getElementById(popupId).classList.remove('show');
-      document.getElementById('overlay').classList.remove('show');
-    }
+  function closePopup() {
+    document.getElementById('overlay').classList.remove('active');
+    document.querySelectorAll('.popup').forEach(p => p.classList.remove('active'));
+  }
   </script>
 </body>
 </html>
