--- a/apuntate.html
+++ b/apuntate.html
@@ -35,7 +35,7 @@
     <div class="projects-grid">
 
       <!-- Monitor -->
-      <div class="section">
+      <div class="section" style="margin: 0 auto; text-align: center;">
         <img src="img/apuntate-monitor.jpg" alt="Quiero ser monitor">
         <h2>Quiero ser monitor</h2>
         <button class="saber-mas" onclick="openPopup('popupMonitor')">
@@ -44,7 +44,7 @@
       </div>
 
       <!-- Scout -->
-      <div class="section">
+      <div class="section" style="margin: 0 auto; text-align: center;">
         <img src="img/apuntate-scout.jpg" alt="Quiero ser scout">
         <h2>Quiero ser scout</h2>
         <button class="saber-mas" onclick="openPopup('popupScout')">
