--- a/apuntate.html
+++ b/apuntate.html
@@ -32,7 +32,7 @@
   </header>
 
   <main>
-    <div class="apuntate-grid">
+    <div class="projects-grid">
 
       <!-- Monitor -->
       <div class="section">
@@ -59,7 +59,7 @@
   <div class="overlay" id="overlay" onclick="closePopup()"></div>
 
   <!-- POPUP MONITOR -->
-  <div id="popupMonitor" class="popup">
+  <div id="popupMonitor" class="popup-header">
     <button class="cerrar" onclick="closePopup()">✖</button>
     <h2>Inscripción Monitor</h2>
 
@@ -76,7 +76,7 @@
   </div>
 
   <!-- POPUP SCOUT -->
-  <div id="popupScout" class="popup">
+  <div id="popupScout" class="popup-header">
     <button class="cerrar" onclick="closePopup()">✖</button>
     <h2>Inscripción Scout</h2>
 
