--- a/apuntate.html
+++ b/apuntate.html
@@ -59,7 +59,7 @@
   <div class="overlay" id="overlay" onclick="closePopup()"></div>
 
   <!-- POPUP MONITOR -->
-  <div id="popupMonitor" class="popup-header">
+  <div id="popupMonitor" class="popup">
     <button class="cerrar" onclick="closePopup()">✖</button>
     <h2>Inscripción Monitor</h2>
 
@@ -76,7 +76,7 @@
   </div>
 
   <!-- POPUP SCOUT -->
-  <div id="popupScout" class="popup-header">
+  <div id="popupScout" class="popup">
     <button class="cerrar" onclick="closePopup()">✖</button>
     <h2>Inscripción Scout</h2>
 
