--- a/apuntate.html
+++ b/apuntate.html
@@ -60,7 +60,7 @@
 
   <!-- POPUP MONITOR -->
   <div id="popupMonitor" class="popup">
-    <button class="cerrar" onclick="closePopup()">✖</button>
+    <button onclick="closePopup()">✖</button>
     <h2>Inscripción Monitor</h2>
 
     <form action="https://formspree.io/f/mzdbobba" method="POST">
@@ -77,7 +77,7 @@
 
   <!-- POPUP SCOUT -->
   <div id="popupScout" class="popup">
-    <button class="cerrar" onclick="closePopup()">✖</button>
+    <button onclick="closePopup()">✖</button>
     <h2>Inscripción Scout</h2>
 
     <form action="https://formspree.io/f/mgoedeer" method="POST">
