--- a/apuntate.html
+++ b/apuntate.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Actividades">
-    <meta name="author" content="Grupo Scout Vatnajökull">
-    <title>Actividades - Grupo Scout Vatnajökull</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
-    <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
-    <link rel="icon" title="Icono del Grupo Scout Vatnajökull" type="image/png" href="https://gsvatnajokull.github.io/img/logo.gif">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Inscripción">
+  <meta name="author" content="Grupo Scout Vatnajökull">
+  <meta name="keywords" content="Grupo Scout Vatnajökull Bustarviejo Sierra Norte ASDE Comunidad Madrid">
+  <title>Actividades - Grupo Scout Vatnajökull</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+  <link rel="stylesheet" title="Hoja de estilo de la web" type="text/css" href="mystyle.css">
+  <link rel="icon" title="Icono del Grupo Scout Vatnajökull" type="image/png" href="https://gsvatnajokull.github.io/img/logo.gif">
 </head>
 
 <body>
@@ -95,15 +96,15 @@
   </footer>
 
   <script>
-  function openPopup(id) {
-    document.getElementById('overlay').classList.add('active');
-    document.getElementById(id).classList.add('active');
-  }
+    function openPopup(popupId) {
+        document.getElementById(popupId).classList.add('show');
+        document.getElementById('overlay').classList.add('show');
+    }
 
-  function closePopup() {
-    document.getElementById('overlay').classList.remove('active');
-    document.querySelectorAll('.popup').forEach(p => p.classList.remove('active'));
-  }
+    function closePopup(popupId) {
+        document.getElementById(popupId).classList.remove('show');
+        document.getElementById('overlay').classList.remove('show');
+    }
   </script>
 </body>
 </html>
