--- a/apuntate.html
+++ b/apuntate.html
@@ -55,7 +55,7 @@
   </main>
 
   <!-- Overlay -->
-  <div class="overlay" id="overlay" onclick="closePopup()"></div>
+  <div class="overlay" id="overlay"></div>
 
   <!-- POPUP MONITOR -->
   <div id="popupMonitor" class="popup">
