--- a/apuntate.html
+++ b/apuntate.html
@@ -58,7 +58,7 @@
 
   <!-- POPUP MONITOR -->
   <div id="popupMonitor" class="popup">
-    <button onclick="closePopup()">✖</button>
+    <button onclick="closePopup('popupMonitor')">✖</button>
     <h2>Inscripción Monitor</h2>
     <form action="https://formspree.io/f/mzdbobba" method="POST">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
@@ -72,7 +72,7 @@
 
   <!-- POPUP SCOUT -->
   <div id="popupScout" class="popup">
-    <button onclick="closePopup()">✖</button>
+    <button onclick="closePopup('popupScout')">✖</button>
     <h2>Inscripción Scout</h2>
     <form action="https://formspree.io/f/mgoedeer" method="POST">
       <input type="text" name="nombre" placeholder="Nombre del interesado" required>
