--- a/actividades.html
+++ b/actividades.html
@@ -35,39 +35,39 @@
   <main>
     <div class="projects-grid">
       <div class="section">
-        <img src="img/portfolio/actividad1.jpeg" alt="Actividad 1">
-        <h2>Actividad 1</h2>
-        <button class="saber-mas" onclick="openPopup('popupActividad1')">Saber más</button>
+        <img src="img/sabados.jpg" alt="Sabados">
+        <h2>Los sábados</h2>
+        <button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>
       </div>
       <div class="section">
-        <img src="img/portfolio/actividad2.jpeg" alt="Actividad 2">
-        <h2>Actividad 2</h2>
-        <button class="saber-mas" onclick="openPopup('popupActividad2')">Saber más</button>
+        <img src="img/campamento.jpg" alt="Campamentos">
+        <h2>Campamentos</h2>
+        <button class="saber-mas" onclick="openPopup('Campamentos')">Saber más</button>
       </div>
       <div class="section">
-        <img src="img/portfolio/actividad3.jpeg" alt="Actividad 3">
-        <h2>Actividad 3</h2>
-        <button class="saber-mas" onclick="openPopup('popupActividad3')">Saber más</button>
-    </div>
+        <img src="img/excursion.jpg" alt="Excursiones">
+        <h2>Excursiones</h2>
+        <button class="saber-mas" onclick="openPopup('Excursiones')">Saber más</button>
+      </div>
     </div>
   </main>
 
   <div class="overlay" id="overlay"></div>
-  
-  <div id="popupActividad1" class="popup">
-    <h2>Actividad 1</h2>
-    <p>Resumen de actividad 1.</p>
-    <button onclick="closePopup('popupActividad1')">Cerrar</button>
+
+  <div id="Sabados" class="popup">
+    <h2>Los sábados</h2>
+    <p>Nos reuniremos los sábados por la tarde para compartir un espacio lleno de actividad y diversión, donde realizaremos deportes, talleres y propuestas dinámicas pensadas para aprender jugando. A través de estas actividades, los niños y jóvenes hacen nuevos amigos, cantan, trabajan en equipo, desarrollan proyectos y participan en acciones de servicio a la comunidad, creciendo como personas en un ambiente cercano, educativo y lleno de valores.</p>
+    <button onclick="closePopup('Sabados')">Cerrar</button>
+  </div> 
+  <div id="Campamentos" class="popup">
+    <h2>Campamentos</h2>
+    <p>Uno de los momentos más especiales y esperados del año scout son los campamentos, ya que representan una oportunidad única para convivir, aprender y crecer juntos fuera de la rutina diaria. Durante fechas señaladas como Navidad y Semana Santa, el grupo realiza convivencias de varios días en las que se refuerzan los lazos de amistad, se trabajan valores como la cooperación y el respeto, y se disfrutan actividades en contacto con la naturaleza. En verano, el curso culmina con un gran campamento, una experiencia intensa y llena de aventuras donde los scouts ponen en práctica todo lo aprendido durante el año. Estos días compartidos, llenos de juegos, retos, servicio y momentos de reflexión, dejan recuerdos imborrables y aprendizajes que acompañan a cada scout para toda la vida.</p>
+    <button onclick="closePopup('Campamentos')">Cerrar</button>
   </div>
-  <div id="popupActividad2" class="popup">
-    <h2>Actividad 2</h2>
-    <p>Resumen de actividad 2.</p>
-    <button onclick="closePopup('popupActividad2')">Cerrar</button>
-  </div>
-  <div id="popupActividad3" class="popup">
-    <h2>Actividad 3</h2>
-    <p>Resumen de actividad 2.</p>
-    <button onclick="closePopup('popupActividad3')">Cerrar</button>
+  <div id="Excursiones" class="popup">
+    <h2>Excursiones</h2>
+    <p>En las excursiones o <i>raids</i> viviremos aventuras y aprenderemos al aire libre. Es el momento de poner en práctica habilidades como la orientación, el trabajo en equipo y la autosuficiencia. Caminaremos por entornos naturales, llevando lo necesario en la mochila, lo que fomentará nuestra responsabilidad y la planificación. Durante el recorrido superaremos desafíos, tomamos decisiones en grupo y reforzamos valores como la solidaridad, el respeto por la naturaleza y el compañerismo, convirtiendo cada <i>raid</i> en una vivencia formativa y memorable.</p>
+    <button onclick="closePopup('Excursiones')">Cerrar</button>
   </div>
 
   <footer id="contact">
