--- a/apuntate.html
+++ b/apuntate.html
@@ -60,6 +60,7 @@
   <div id="popupMonitor" class="popup">
     <button onclick="closePopup('popupMonitor')">✖</button>
     <h2>Inscripción Monitor</h2>
+    <p>Requisitos: tener al menos 21 años y el título de Monitor de Ocio y Tiempo Libre</p>
     <form action="https://formspree.io/f/mzdbobba" method="POST">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
       <input type="email" name="email" placeholder="Email" required>
@@ -74,6 +75,7 @@
   <div id="popupScout" class="popup">
     <button onclick="closePopup('popupScout')">✖</button>
     <h2>Inscripción Scout</h2>
+    <p>Requisitos: tener entre 6 y 17 años y ganas de aprender disfrutando de la naturaleza.</p>
     <form action="https://formspree.io/f/mgoedeer" method="POST">
       <input type="text" name="nombre" placeholder="Nombre del interesado" required>
       <input type="number" name="edad" placeholder="Edad" required>
