--- a/apuntate.html
+++ b/apuntate.html
@@ -27,7 +27,7 @@
         <li><a href="aboutus.html"><i class="fas fa-users"></i> Quienes somos</a></li>
         <li><a href="actividades.html"><i class="fas fa-project-diagram"></i> Actividades</a></li>
         <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
-        <li><a href="apuntate.html"><i class="fas fa-project-diagram"></i> ¡Apúntate!</a></li>
+        <li><a href="apuntate.html"><i class="fas fa-user-plus"></i> ¡Apúntate!</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +42,11 @@
           Inscripción
         </button>
       </div>
-
+      <div class="section">
+        <img src="img/sabados.jpg" alt="Sabados">
+        <h2>Los sábados</h2>
+        <button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>
+      </div>
       <!-- Scout -->
       <div class="section">
         <img src="img/apuntate-scout.jpg" alt="Quiero ser scout">
@@ -60,7 +64,7 @@
   <div id="popupMonitor" class="popup">
     <button onclick="closePopup('popupMonitor')">✖</button>
     <h2>Inscripción Monitor</h2>
-    <p>Requisitos: tener al menos 21 años y el título de Monitor de Ocio y Tiempo Libre</p>
+    <p>Requisitos: tener al menos 21 años y el título de Monitor de Ocio y Tiempo Libre.</p>
     <form action="https://formspree.io/f/mzdbobba" method="POST">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
       <input type="email" name="email" placeholder="Email" required>
@@ -77,10 +81,10 @@
     <h2>Inscripción Scout</h2>
     <p>Requisitos: tener entre 6 y 17 años y ganas de aprender disfrutando de la naturaleza.</p>
     <form action="https://formspree.io/f/mgoedeer" method="POST">
-      <input type="text" name="nombre" placeholder="Nombre del interesado" required>
+      <input type="text" name="nombre" placeholder="Nombre del interesad@" required>
       <input type="number" name="edad" placeholder="Edad" required>
       <input type="email" name="email" placeholder="Email de contacto" required>
-      <textarea name="mensaje" placeholder="Mensaje opcional"></textarea>
+      <textarea name="mensaje" placeholder="Comentarios (opcional)"></textarea>
       <input type="text" name="_gotcha" style="display:none">
       <button type="submit">Enviar inscripción</button>
     </form>
