--- a/actividades.html
+++ b/actividades.html
@@ -34,17 +34,17 @@
 
   <main>
     <div class="projects-grid">
-      <div class="section">
+      <div class="section" style="width: 100%;">
         <img src="img/sabados.jpg" alt="Sabados">
         <h2>Los sábados</h2>
         <button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>
       </div>
-      <div class="section">
+      <div class="section" style="width: 100%;">
         <img src="img/campamento.jpg" alt="Campamentos">
         <h2>Campamentos</h2>
         <button class="saber-mas" onclick="openPopup('Campamentos')">Saber más</button>
       </div>
-      <div class="section">
+      <div class="section" style="width: 100%;">
         <img src="img/excursion.jpg" alt="Excursiones">
         <h2>Excursiones</h2>
         <button class="saber-mas" onclick="openPopup('Excursiones')">Saber más</button>
