--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="aboutus.html"><i class="fas fa-users"></i> Quienes somos</a></li>
         <li><a href="actividades.html"><i class="fas fa-project-diagram"></i> Actividades</a></li>
         <li><a href="#contact"><i class="fas fa-envelope"></i> Contacto</a></li>
-        <li><a href="apuntate.html"><i class="fas fa-user-plus"></i> ¡Apúntate!</a></li>
+        <li><a style="background:linear-gradient(90deg,#ff7a00,#ff3b00);" href="apuntate.html"><i class="fas fa-user-plus"></i> ¡Apúntate!</a></li>
       </ul>
     </nav>
   </header>
