--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,8 @@
           responsables, abiertas y solidarias, críticas y comprometidas con su entorno,
           consigo mismas y con los valores que construyen una sociedad mejor.
       </p>
-
+      <h2>¿A qué se debe el nombre del grupo?</h2>
+      <p>El Grupo Xcout <b>Vatnajökull</b> toma su nombre del glaciar más grande de Europa porque representa lo que defendemos: la naturaleza en su estado más puro y la urgencia de protegerla. Así como el Vatnajökull se alza en uno de los entornos más intactos del planeta, este grupo nace en la sierra con el compromiso de cuidar el entorno que habitamos. Vatnajökull representa aquello que se construye con tiempo, esfuerzo y compromiso, valores que el grupo busca transmitir a cada scout. Más que un lugar o un glaciar, el nombre es una referencia a la capacidad de mantenerse firme, adaptarse y avanzar juntos, dejando huella no por la imposición, sino por el ejemplo.</p>
       <h2>Nuestro estilo educativo</h2>
       <p>
           Nuestra propuesta educativa se basa en el Método Scout, un sistema pedagógico
@@ -62,17 +63,18 @@
 
       <h2>¿A quién va dirigido?</h2>
       <p>
-          El grupo está abierto a niños, niñas y jóvenes a partir de los 6 años, organizados
+          El grupo está abierto a niños, niñas y jóvenes de entre 9 y 17 años, organizados
           en diferentes ramas según la edad, para adaptar las actividades a cada etapa de
           desarrollo:
       </p>
       <p>
       <ul>
-          <li><strong>Castores:</strong> de 6 a 8 años.</li>
+          <!--<li><strong>Castores:</strong> de 6 a 8 años.</li>-->
           <li><strong>Lobatos:</strong> de 9 a 11 años.</li>
           <li><strong>Tropa:</strong> de 12 a 14 años.</li>
           <li><strong>Escultas:</strong> de 15 a 17 años.</li>
-          <li><strong>Kraal:</strong> equipo de monitores y monitoras voluntarios.</li>
+          <!--<li><strong>Rovers:</strong> de 18 a 21 años.</li>-->
+          <li><strong>Kraal:</strong> desde 21 años, equipo de monitores y monitoras voluntarios.</li>
       </ul>
       </p>
 
@@ -101,7 +103,8 @@
       <p>
           Si quieres formar parte de este nuevo proyecto scout desde sus inicios, o estás
           interesado en recibir más información, no dudes en ponerte en contacto con
-          nosotros. Estaremos encantados de resolver tus dudas y acompañarte en este
+          nosotros a través de la pestaña de <i>¡Apúntate!</i>.
+          Estaremos encantados de resolver tus dudas y acompañarte en este
           comienzo.
       </p>
       <p><strong>¡Escríbenos!</strong></p>
