--- a/aboutus.html
+++ b/aboutus.html
@@ -48,7 +48,7 @@
           consigo mismas y con los valores que construyen una sociedad mejor.
       </p>
       <h2>¿A qué se debe el nombre del grupo?</h2>
-      <p>El Grupo Scout <b>Vatnajökull</b> toma su nombre del glaciar más grande de Europa porque representa lo que defendemos: la naturaleza en su estado más puro y la urgencia de protegerla. Así como el Vatnajökull se alza en uno de los entornos más intactos del planeta, este grupo nace en la sierra con el compromiso de cuidar el entorno que habitamos. Vatnajökull representa aquello que se construye con tiempo, esfuerzo y compromiso, valores que el grupo busca transmitir a cada scout. Más que un lugar o un glaciar, el nombre es una referencia a la capacidad de mantenerse firme, adaptarse y avanzar juntos, dejando huella no por la imposición, sino por el ejemplo.</p>
+      <p>El Grupo Scout <b>Vatnajökull</b> toma su nombre del glaciar más grande de Europa porque representa lo que defendemos: la naturaleza en su estado más puro y la urgencia de protegerla. Así como el Vatnajökull se alza en uno de los entornos más intactos del planeta, Islandia, este grupo nace en la sierra con el compromiso de cuidar el entorno que habitamos. Vatnajökull representa aquello que se construye con tiempo, esfuerzo y compromiso, valores que el grupo busca transmitir a cada scout. Más que un lugar o un glaciar, el nombre es una referencia a la capacidad de mantenerse firme, adaptarse y avanzar juntos, dejando huella no por la imposición, sino por el ejemplo.</p>
       <h2>Nuestro estilo educativo</h2>
       <p>
           Nuestra propuesta educativa se basa en el Método Scout, un sistema pedagógico
