--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 
   <main>
     <section class="section">
-      <h2>¿Quieres ser monitor del grupo? ¡Únete!</h2>
+      <h2>Buscamos monitores para el grupo. ¡Inscripciones abiertas!</h2>
         <p>
-            ¿Te apasiona la naturaleza y quieres ser parte de una aventura educativa única?
+            ¿Tienes el título de Monitor de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
+            naturaleza y quieres ser parte de una aventura educativa única?
             ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
             pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
             muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
-            que acompañarás, sino también la tuya.
+            que acompañarás, sino también la tuya. <b>¡Empezamos en octubre de 2026!</b>
         </p>
 
       <h2>¿Por qué hacer voluntariado con nosotros?</h2>
