--- a/apuntate.html
+++ b/apuntate.html
@@ -94,7 +94,7 @@
   </div>-->
 
   <div id="popupScout" class="popup popup-disabled">
-    <button class="close-btn" onclick="closePopup('popupScout')">✖</button>
+    <button style="cursor: pointer;" onclick="closePopup('popupScout')">✖</button>
     <h2>Inscripción Scout</h2>
 
     <div class="popup-alert">
