--- a/index.html
+++ b/index.html
@@ -102,14 +102,12 @@
             ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
         </p>
 
-        <p><strong>¡Escríbenos!</strong></p>
+        <p style="text-align: center;"><strong>¡Escríbenos!</strong></p>
         <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
         <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
         </div>
         <br>
-        <p>
-            <strong>¡Te esperamos en Bustarviejo!</strong>
-        </p>
+        <p style="text-align: center;"><strong>¡Te esperamos en Bustarviejo!</strong></p>
     </section>
   </main>
 
