--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
   <main>
     <section class="section">
+      <div class="anuncio-destacado">
+        🎉 ¡Empezamos en <strong>octubre de 2026</strong>!
+      </div>
       <h2>Buscamos monitores para el grupo. ¡Inscripciones abiertas!</h2>
         <p>
             ¿Tienes el título de Monitor de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
@@ -41,7 +44,7 @@
             ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
             pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
             muy enriquecedora de voluntariado que no solo transformará la vida de los niños y niñas
-            que acompañarás, sino también la tuya. <b>¡Empezamos en octubre de 2026!</b>
+            que acompañarás, sino también la tuya.
         </p>
 
       <h2>¿Por qué hacer voluntariado con nosotros?</h2>
