--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <main>
     <section class="section">
       <div class="anuncio-destacado">
-        🎉 ¡Empezamos en <strong>octubre de 2026</strong>!
+        <span>⛺</span>
+        <span>Empezamos en <strong>octubre de 2026</strong></span>
       </div>
       <h2>Buscamos monitores para el grupo. ¡Inscripciones abiertas!</h2>
         <p>
