--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
   <main>
     <section class="section">
       <div class="anuncio-destacado">
-        <span>⛺</span>
-        <span>Empezamos en <strong>octubre de 2026</strong></span>
+        ⛺ ¡Empezamos en <strong>octubre de 2026</strong>!
       </div>
       <h2>Buscamos monitores para el grupo. ¡Inscripciones abiertas!</h2>
         <p>
