--- a/apuntate.html
+++ b/apuntate.html
@@ -36,8 +36,8 @@
     <div class="projects-grid">
       <!-- Monitor -->
       <div class="section" style="width: 100%;">
-        <img src="img/apuntate-monitor.jpg" alt="Quiero ser monitor">
-        <h2>Quiero ser monitor</h2>
+        <img src="img/apuntate-monitor.jpg" alt="Quiero ser scouter (monitor/a)">
+        <h2>Quiero ser scouter (monitor/a)</h2>
         <button class="saber-mas" onclick="openPopup('popupMonitor')">
           Inscripción
         </button>
@@ -65,8 +65,8 @@
   <!-- POPUP MONITOR -->
   <div id="popupMonitor" class="popup">
     <button onclick="closePopup('popupMonitor')">✖</button>
-    <h2>Inscripción Monitor</h2>
-    <p>Requisitos: tener al menos 21 años y el título de Monitor de Ocio y Tiempo Libre.</p>
+    <h2>Inscripción scouter</h2>
+    <p>Requisitos: tener al menos 21 años y el título de Monitor/a de Ocio y Tiempo Libre.</p>
     <form action="https://formspree.io/f/mzdbobba" method="POST">
       <input type="text" name="nombre" placeholder="Nombre completo" required>
       <input type="email" name="email" placeholder="Email" required>
