--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <span>Empezamos en <strong>octubre de 2026</strong></span>
       </div>
       <br>
-      <h2>Buscamos monitores para el grupo. ¡Inscripciones abiertas!</h2>
+      <h2>Buscamos monitores/as para el grupo. ¡Inscripciones abiertas!</h2>
         <p>
-            ¿Tienes el título de Monitor de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
+            ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
             naturaleza y quieres ser parte de una aventura educativa única?
             ¡Únete a nosotros! El Grupo Scout Vatnajökull, ubicado en el hermoso y tranquilo
             pueblo de Bustarviejo, en el corazón de la Sierra de Madrid, te ofrece una oportunidad
@@ -61,7 +61,7 @@
         <p>
         <ul>
             <li>
-                <strong>Crecimiento personal:</strong> Ser monitor en un grupo scout es mucho más
+                <strong>Crecimiento personal:</strong> Ser monitor/a en un grupo scout es mucho más
                 que enseñar, es una oportunidad para crecer, desarrollar nuevas habilidades de
                 liderazgo y adquirir experiencia en el trabajo con niños y jóvenes.
             </li>
@@ -90,7 +90,7 @@
             sin importar tu nivel de experiencia, ¡te estamos esperando!
         </p>
 
-      <h2>¿Qué ganarás como voluntario?</h2>
+      <h2>¿Qué ganarás como voluntario/a?</h2>
         <p>
         <ul>
             <li>Desarrollo de habilidades de liderazgo y trabajo en equipo.</li>
@@ -101,7 +101,7 @@
         </ul>
         </p>
 
-      <h2>¿Estás listo para ser parte de una aventura educativa única?</h2>
+      <h2>¿Estás listo/a para ser parte de una aventura educativa única?</h2>
         <p>
             Si tienes 21 años o más y la titulación de Monitor de Ocio y Tiempo Libre, y estás buscando una experiencia transformadora que combine la naturaleza, la educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
             ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
