--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <h2>¿Estás listo/a para ser parte de una aventura educativa única?</h2>
         <p>
-            Si tienes 21 años o más y la titulación de Monitor de Ocio y Tiempo Libre, y estás buscando una experiencia transformadora que combine la naturaleza, la educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
+            Si tienes 21 años o más y la titulación de Monitor/a de Ocio y Tiempo Libre, y estás buscando una experiencia transformadora que combine la naturaleza, la educación y el trabajo en equipo, el Grupo Scout Vatnajökull es tu oportunidad.
             ¡No dudes en ponerte en contacto con nosotros y dar el primer paso!
         </p>
 
