--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>
             Al ser parte de este grupo scout estarás inmerso en un entorno natural incomparable,
             rodeado de montañas, bosques y una paz que solo la sierra puede ofrecer. Aquí no solo
-            serás un monitor, sino que formarás parte de una comunidad educativa que valora el
+            serás un monitor/a, sino que formarás parte de una comunidad educativa que valora el
             crecimiento personal, el aprendizaje y el trabajo en equipo.
         </p>
 
@@ -68,7 +68,7 @@
             <li>
                 <strong>Formación continua:</strong> No necesitas experiencia previa. Valoramos
                 más tu entusiasmo, pasión por el trabajo en equipo y tu disposición a aprender.
-                Además, si todavía no tienes el título de monitor de ocio y tiempo libre, tendrás
+                Además, si todavía no tienes el título de monitor/a de ocio y tiempo libre, tendrás
                 la posibilidad de realizar las prácticas y/o el curso de coordinador.
             </li>
             <li>
