--- a/apuntate.html
+++ b/apuntate.html
@@ -37,7 +37,8 @@
       <!-- Monitor -->
       <div class="section" style="width: 100%;">
         <img src="img/apuntate-monitor.jpg" alt="Quiero ser scouter (monitor/a)">
-        <h2>Quiero ser scouter (monitor/a)</h2>
+        <h2 style="text-align:center">Quiero ser scouter</h2>
+        <h3 style="text-align:center">(Monitor/a)</h3>
         <button class="saber-mas" onclick="openPopup('popupMonitor')">
           Inscripción
         </button>
@@ -45,14 +46,14 @@
       <!-- Scout -->
       <div class="section" style="width: 100%;">
         <img src="img/apuntate-scout.jpg" alt="Quiero ser scout">
-        <h2>Quiero ser scout</h2>
+        <h2 style="text-align:center">Quiero ser scout</h2>
         <button class="saber-mas" onclick="openPopup('popupScout')">
           Inscripción
         </button>
       </div>
       <div class="section" style="width: 100%;">
         <img src="img/dudas.jpg" alt="Dudas">
-        <h2>¿Dudas? ¿Sugerencias?</h2>
+        <h2 style="text-align:center">¿Dudas? ¿Sugerencias?</h2>
         <button class="saber-mas" onclick="openPopup('popupDudas')">
           Buzón de sugerencias
         </button>
