--- a/actividades.html
+++ b/actividades.html
@@ -36,17 +36,17 @@
     <div class="projects-grid">
       <div class="section" style="width: 100%;">
         <img src="img/sabados.jpg" alt="Sabados">
-        <h2>Los sábados</h2>
+        <h2 style="text-align:center">Los sábados</h2>
         <button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>
       </div>
       <div class="section" style="width: 100%;">
         <img src="img/campamento.jpg" alt="Campamentos">
-        <h2>Campamentos</h2>
+        <h2 style="text-align:center">Campamentos</h2>
         <button class="saber-mas" onclick="openPopup('Campamentos')">Saber más</button>
       </div>
       <div class="section" style="width: 100%;">
         <img src="img/excursion.jpg" alt="Excursiones">
-        <h2>Excursiones</h2>
+        <h2 style="text-align:center">Excursiones</h2>
         <button class="saber-mas" onclick="openPopup('Excursiones')">Saber más</button>
       </div>
     </div>
