--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <span>Empezamos en <strong>octubre de 2026</strong></span>
       </div>
       <br>
-      <h2>Buscamos monitores/as para el grupo. ¡Inscripciones abiertas!</h2>
+      <h2>Buscamos scouters (monitores/as) para el grupo. ¡Inscripciones abiertas!</h2>
         <p>
             ¿Tienes el título de Monitor/a de Ocio y Tiempo Libre y más de 21 años? ¿Te apasiona la 
             naturaleza y quieres ser parte de una aventura educativa única?
@@ -61,7 +61,7 @@
         <p>
         <ul>
             <li>
-                <strong>Crecimiento personal:</strong> Ser monitor/a en un grupo scout es mucho más
+                <strong>Crecimiento personal:</strong> Ser scouter (monitor/a) en un grupo scout es mucho más
                 que enseñar, es una oportunidad para crecer, desarrollar nuevas habilidades de
                 liderazgo y adquirir experiencia en el trabajo con niños y jóvenes.
             </li>
