--- a/aboutus.html
+++ b/aboutus.html
@@ -38,9 +38,11 @@
       <h2>¿Quiénes somos?</h2>
       <p>
           Somos un nuevo Grupo Scout que está naciendo con mucha ilusión en Bustarviejo,
-          en plena Sierra de Madrid. Comenzaremos nuestro camino en la ronda scout 2026-2027,
-          a partir de octubre de 2026, con el objetivo de ofrecer a niños, niñas y jóvenes
-          una alternativa de ocio saludable, educativa y en contacto directo con la naturaleza.
+          en plena Sierra de Madrid. Nuestra sede y, por tanto, donde nos reuniremos los 
+          sábados, es el Colegio Público Montelindo, ubicado en este pueblo. Comenzaremos 
+          nuestro camino en la ronda scout 2026-2027, a partir de octubre de 2026, con el 
+          objetivo de ofrecer a niños, niñas y jóvenes una alternativa de ocio saludable, 
+          educativa y en contacto directo con la naturaleza.
       </p>
       <p>
           Apostamos por una educación en el tiempo libre que forme personas libres y
