--- a/aboutus.html
+++ b/aboutus.html
@@ -37,11 +37,14 @@
     <section id="about" class="section">
       <h2>¿Quiénes somos?</h2>
       <p>
-          Somos un nuevo Grupo Scout que está naciendo con mucha ilusión en Bustarviejo,
-          en plena Sierra de Madrid. Nuestra sede y, por tanto, donde nos reuniremos los 
-          sábados, es el Colegio Público Montelindo, ubicado en este pueblo. Comenzaremos 
-          nuestro camino en la ronda scout 2026-2027, a partir de octubre de 2026, con el 
-          objetivo de ofrecer a niños, niñas y jóvenes una alternativa de ocio saludable, 
+          Somos un nuevo Grupo Scout que está naciendo con mucha ilusión en <b>Bustarviejo</b>,
+          en plena Sierra de Madrid.
+          El lugar donde realizaremos nuestras actividades los sábados será el <b>Colegio 
+          Público Montelindo</b>, al que queremos expresar nuestro más sincero agradecimiento 
+          -tanto al Ayuntamiento como al centro educativo- por la magnífica acogida que 
+          nos han brindado y por cedernos amablemente sus instalaciones en este municipio.
+          Comenzaremos nuestro camino en la ronda scout 2026-2027, a partir de <b>octubre de 2026</b>, 
+          con el objetivo de ofrecer a niños, niñas y jóvenes una alternativa de ocio saludable, 
           educativa y en contacto directo con la naturaleza.
       </p>
       <p>
