--- a/404.html
+++ b/404.html
@@ -34,11 +34,10 @@
   <footer id="contact">
     <h2>Ponte en contacto con nosotros</h2>
     <div class="social-icons">
-      <a href="https://twitter.com/gsvatnajokull"><i class="fab fa-twitter"></i> gsvatnajokull</a>
       <a href="mailto:gsvatnajokull@gmail.com"><i class="fas fa-envelope"></i> gsvatnajokull@gmail.com</a>
       <a href="https://www.instagram.com/gsvatnajokull"><i class="fab fa-instagram"></i> gsvatnajokull</a>
     </div>
-    <p>&copy; 2025 Grupo Scout Vatnajökull.</p>
+    <p>&copy; 2025 Grupo Scout Vatnajökull. Última actualización: enero'26</p>
   </footer>
 </body>
 </html>
