--- a/aboutus.html
+++ b/aboutus.html
@@ -123,17 +123,30 @@
       <p>
           <strong>¡Te esperamos en Bustarviejo para empezar juntos esta nueva aventura scout!</strong>
       </p>
+      <br>
+      <h2 style="text-align: center;">Colabora</h2>
     </section>
+    <div class="projects-grid">
+      <div class="section" style="width: 100%;">
+        <img src="img/logo-ayto.png" alt="Logo Ayto. Bustarviejo" style="width: 208px; height: auto;">
+        <h2 style="text-align:center">Ayto. Bustarviejo</h2>
+        <!--<button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>-->
+      </div>
+      <div class="section" style="width: 100%;">
+        <img src="img/logo-cole.png" alt="Logo Colegio Montelindo" style="width: 366px; height: auto;">
+        <h2 style="text-align:center">CEIP Montelindo</h2>
+        <!--<button class="saber-mas" onclick="openPopup('Campamentos')">Saber más</button>-->
+      </div>
+    </div>
   </main>
 
   <footer id="contact">
     <h2>Ponte en contacto con nosotros</h2>
     <div class="social-icons">
-      <a href="https://twitter.com/gsvatnajokull"><i class="fab fa-twitter"></i> gsvatnajokull</a>
       <a href="mailto:gsvatnajokull@gmail.com"><i class="fas fa-envelope"></i> gsvatnajokull@gmail.com</a>
       <a href="https://www.instagram.com/gsvatnajokull"><i class="fab fa-instagram"></i> gsvatnajokull</a>
     </div>
-    <p>&copy; 2025 Grupo Scout Vatnajökull.</p>
+    <p>&copy; 2025 Grupo Scout Vatnajökull. Última actualización: enero'26</p>
   </footer> 
 </body>
 </html>
