--- a/aboutus.html
+++ b/aboutus.html
@@ -114,15 +114,13 @@
           Estaremos encantados de resolver tus dudas y acompañarte en este
           comienzo.
       </p>
-      <p><strong>¡Escríbenos!</strong></p>
+      <p style="text-align: center;"><strong>¡Escríbenos!</strong></p>
       <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:12px;">
         <a class="cta-button" href="mailto:gsvatnajokull@gmail.com">gsvatnajokull@gmail.com</a>
         <a class="cta-button" style="background:linear-gradient(90deg,#ff7a00,#ff3b00);" href="https://opencollective.com/gsvatnajokull" target="_blank">Apóyanos</a>
       </div>
       <br>
-      <p>
-          <strong>¡Te esperamos en Bustarviejo para empezar juntos esta nueva aventura scout!</strong>
-      </p>
+      <p style="text-align: center;"><strong>¡Te esperamos en Bustarviejo para empezar juntos esta nueva aventura scout!</strong></p>
       <br>
       <h2 style="text-align: center;">Colabora</h2>
       <div class="projects-grid">
