--- a/aboutus.html
+++ b/aboutus.html
@@ -125,12 +125,12 @@
       <h2 style="text-align: center;">Colabora</h2>
       <div class="projects-grid">
         <div class="section" style="width: 100%;">
-          <img src="img/logo-ayto.png" alt="Logo Ayto. Bustarviejo" style="height: 195px; width: auto;">
+          <img src="img/logo-ayto.png" alt="Logo Ayto. Bustarviejo" style="height: 194px; width: 208;">
           <h2 style="text-align:center">Ayto. Bustarviejo</h2>
           <!--<button class="saber-mas" onclick="openPopup('Sabados')">Saber más</button>-->
         </div>
         <div class="section" style="width: 100%;">
-          <img src="img/logo-cole.png" alt="Logo Colegio Montelindo" style="height: 195px; width: auto;">
+          <img src="img/logo-cole.png" alt="Logo Colegio Montelindo" style="height: 194px; width: 208;">
           <h2 style="text-align:center">CEIP Montelindo</h2>
           <!--<button class="saber-mas" onclick="openPopup('Campamentos')">Saber más</button>-->
         </div>
